# plog

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: json.rs  log.rs  logfmt.rs  main.rs
