[package]
name = "plog"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
chrono = { version = "0.4" }
colored = { version = "3.0" }
logfmt = { version = "0.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = { version = "0.3" }
tokio = { version = "1.48", features = ["io-std", "io-util", "macros", "rt"] }
